@@ -218,6 +218,8 @@ $Id$
             <translation lang="gl">realmente</translation>
             <translation lang="es">real</translation>
             <translation lang="ca">real</translation>
+            <translation lang="nl">feitenlijk</translation>
+            <translation lang="nl">eigenlijk</translation>
         </rule>
         <rule>
             <pattern lang="de">
@@ -296,6 +298,12 @@ $Id$
             <translation lang="en">current</translation>
             <translation lang="en">(the) latest</translation>
             <translation lang="en">up-to-date</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
+                <token inflected="yes">actual</token>
+            </pattern>
+            <translation lang="en">topical</translation>
         </rule>
     </rulegroup>
     <rulegroup id="ACTUALITY">
@@ -510,12 +518,21 @@ $Id$
                 <token>agenda</token>
             </pattern>
             <translation lang="gl">orde do día</translation>
+            <translation lang="nl">programma</translation>
+            <translation lang="nl">agenda</translation>
         </rule>
         <rule>
             <pattern lang="gl">
                 <token inflected="yes">axenda</token>
             </pattern>
             <translation lang="en">diary</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
+                <token inflected="yes">agenda</token>
+            </pattern>
+            <translation lang="en">diary</translation>
+            <translation lang="en">agenda</translation>
         </rule>
     </rulegroup>
     <rulegroup id="AGGRO">
@@ -618,12 +635,19 @@ $Id$
             </pattern>
             <translation lang="pl">błazeństwa</translation>
             <translation lang="pl">wyskoki</translation>
+            <translation lang="nl">capriolen</translation>
         </rule>
         <rule>
             <pattern lang="pl">
                 <token>antyki</token>
             </pattern>
             <translation lang="en">antiques</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
+                <token inflected="yes">antiek</token>
+            </pattern>
+            <translation lang="en">antyque</translation>
         </rule>
     </rulegroup>
     <rulegroup id="APARTMENT">
@@ -875,6 +899,7 @@ $Id$
             <translation lang="pl">koszary</translation>
             <translation lang="it">caserma</translation>
             <translation lang="gl">cuartel</translation>
+            <translation lang="nl">kazerne</translation>
         </rule>
         <rule>
             <pattern lang="pl">
@@ -889,6 +914,12 @@ $Id$
             </pattern>
             <translation lang="en">hut</translation>
             <translation lang="en">shack</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
+                <token inflected="yes">barakken</token>
+            </pattern>
+            <translation lang="en">huts</translation>
         </rule>
     </rulegroup>
     <rulegroup id="BASEMENT">
@@ -3162,6 +3193,9 @@ $Id$
             </pattern>
             <translation lang="en">cell phone</translation>
             <translation lang="en">mobile phone</translation>
+            <translation lang="nl">mobiele telefoon</translation>
+            <translation lang="nl">mobiel</translation>
+            <translation lang="nl">mobieltje</translation>
         </rule>
     </rulegroup>
     <rulegroup id="HAZARD">
@@ -3365,9 +3399,19 @@ $Id$
             <translation lang="de">internieren</translation>
             <translation lang="de">ein Praktikum absolvieren</translation>
             <translation lang="de">Praktikant</translation>
+            <translation lang="nl">intern</translation>
+            <translation lang="nl">stagiair</translation>
+            <translation lang="nl">stagiaire</translation>
         </rule>
         <rule>
             <pattern lang="de">
+                <token>intern</token>
+            </pattern>
+            <translation lang="en">internal</translation>
+            <translation lang="en">domestic</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
                 <token>intern</token>
             </pattern>
             <translation lang="en">internal</translation>
@@ -3427,6 +3471,8 @@ $Id$
             </pattern>
             <translation lang="de">Geständnis</translation>
             <translation lang="de">Beichte</translation>
+            <translation lang="nl">bekentenis</translation>
+            <translation lang="nl">biecht</translation>
         </rule>
         <rule>
             <pattern lang="de">
@@ -3586,6 +3632,9 @@ $Id$
                 <token>magazine</token>
             </pattern>
             <translation lang="it">rivista</translation>
+            <translation lang="nl">magazijn</translation>
+            <translation lang="nl">opslag</translation>
+            <translation lang="nl">tijdschrift</translation>
         </rule>
         <rule>
             <pattern lang="it">
@@ -3617,6 +3666,8 @@ $Id$
                 <token>map</token>
             </pattern>
             <translation lang="de">Landkarte</translation>
+            <translation lang="nl">landkaart</translation>
+            <translation lang="nl">kaart</translation>
         </rule>
         <rule>
             <pattern lang="de">
@@ -3625,6 +3676,12 @@ $Id$
             <translation lang="it">cartella</translation>
             <translation lang="en">folder</translation>
             <translation lang="gl">carpeta</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
+                <token>map</token>
+            </pattern>
+            <translation lang="en">folder</translation>
         </rule>
         <rule>
             <pattern lang="it">
@@ -3688,10 +3745,19 @@ $Id$
                 <token inflected="yes">meaning</token>
             </pattern>
             <translation lang="de">Bedeutung</translation>
+            <translation lang="nl">betekenis</translation>
+            <translation lang="nl">mening</translation>
         </rule>
         <rule>
             <pattern lang="de">
                 <token inflected="yes">Meinung</token>
+            </pattern>
+            <translation lang="en">opinion</translation>
+            <translation lang="nl">mening</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
+                <token inflected="yes">mening</token>
             </pattern>
             <translation lang="en">opinion</translation>
         </rule>
@@ -5028,11 +5094,50 @@ $Id$
             </pattern>
             <translation lang="de">die See</translation>
             <translation lang="de">das Meer</translation>
+            <translation lang="nl">de zee</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
+                <token>zee</token>
+            </pattern>
+            <translation lang="de">das Meer</translation>
+            <translation lang="de">die See</translation>
+            <translation lang="en">sea</translation>
         </rule>
         <rule>
             <pattern lang="de">
                 <token>See</token>
             </pattern>
+            <translation lang="en">lake</translation>
+            <translation lang="en">sea</translation>
+            <translation lang="nl">het meer</translation>
+            <translation lang="nl">de zee</translation>
+        </rule>
+        <rule>
+            <pattern lang="de">
+                <token>Meer</token>
+            </pattern>
+            <translation lang="en">sea</translation>
+            <translation lang="en">lake</translation>
+            <translation lang="nl">de zee</translation>
+            <translation lang="nl">het meer</translation>
+        </rule>
+        <rule>
+            <pattern lang="en">
+                <token>lake</token>
+            </pattern>
+            <translation lang="de">die See</translation>
+            <translation lang="de">das Meer</translation>
+            <translation lang="nl">meer</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
+                <token>meer</token>
+            </pattern>
+            <translation lang="de">mehr</translation>
+            <translation lang="de">die See</translation>
+            <translation lang="de">das Meer</translation>
+            <translation lang="en">more</translation>
             <translation lang="en">lake</translation>
         </rule>
     </rulegroup>
@@ -5747,6 +5852,163 @@ $Id$
                 <token inflected="yes">kussen</token>
             </pattern>
             <translation lang="da">pude</translation>
+        </rule>
+    </rulegroup>
+    <rulegroup id="CONDUCTEUR">
+        <rule>
+            <pattern lang="fr">
+                <token inflected="yes">conducteur</token>
+            </pattern>
+            <translation lang="nl">bestuurder</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
+                <token inflected="yes">conducteur</token>
+            </pattern>
+            <translation lang="fr">receveur</translation>
+        </rule>
+    </rulegroup>
+    <rulegroup id="CALDO">
+        <rule>
+            <pattern lang="it">
+                <token inflected="yes">caldo</token>
+            </pattern>
+            <translation lang="nl">warm</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
+                <token inflected="yes">koud</token>
+            </pattern>
+            <translation lang="it">freddo</translation>
+        </rule>
+    </rulegroup>
+    <rulegroup id="WIT">
+        <rule>
+            <pattern lang="en">
+                <token inflected="yes">wit</token>
+            </pattern>
+            <translation lang="nl">gevatheid</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
+                <token inflected="yes">wit</token>
+            </pattern>
+            <translation lang="it">white</translation>
+        </rule>
+    </rulegroup>
+    <!--FIXME Finnish "fi" not yet supported>
+    <rulegroup id="JA">
+        <rule>
+            <pattern lang="fi">
+                <token inflected="yes">ja</token>
+            </pattern>
+            <translation lang="nl">en</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
+                <token inflected="yes">ja</token>
+            </pattern>
+            <translation lang="fi">kyllä</translation>
+        </rule>
+    </rulegroup>
+    <-->
+    <rulegroup id="ADULTSEX">
+        <rule>
+            <pattern lang="en">
+                <token inflected="yes">adult sex</token>
+            </pattern>
+            <translation lang="nl">expliciete seks</translation>
+        </rule>
+    </rulegroup>
+    <rulegroup id="ADULTERY">
+        <rule>
+            <pattern lang="en">
+                <token inflected="yes">adultery</token>
+            </pattern>
+            <translation lang="nl">overspel</translation>
+        </rule>
+    </rulegroup>
+    <rulegroup id="ADMINISTRATION">
+        <rule>
+            <pattern lang="en">
+                <token inflected="yes">administration</token>
+            </pattern>
+            <translation lang="nl">regering</translation>
+        </rule>
+    </rulegroup>
+    <rulegroup id="AGENT">
+        <rule>
+            <pattern lang="en">
+                <token inflected="yes">agent</token>
+            </pattern>
+            <translation lang="nl">tussenpersoon, makelaar, impressario, agent</translation>
+        </rule>
+        <rule>
+           <pattern lang="nl">
+                <token inflected="yes">agent</token>
+            </pattern>
+            <translation lang="en">constable, (police) officer</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
+                <token inflected="yes">politieagent</token>
+            </pattern>
+            <translation lang="en">constable, (police) officer</translation>
+        </rule>
+    </rulegroup>
+    <rulegroup id="ALIMONY">
+        <rule>
+            <pattern lang="en">
+                <token inflected="yes">alimony</token>
+            </pattern>
+            <translation lang="nl">alimentatie</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
+                <token inflected="yes">voeding</token>
+            </pattern>
+            <translation lang="en">alimentation</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
+                <token inflected="yes">levensonderhoud</token>
+            </pattern>
+            <translation lang="en">alimentation</translation>
+        </rule>
+    </rulegroup>
+    <rulegroup id="ALLBUT">
+        <rule>
+            <pattern lang="en">
+                <token inflected="yes">all but</token>
+            </pattern>
+            <translation lang="nl">bijna</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
+                <token inflected="yes">allesbehalve</token>
+            </pattern>
+            <translation lang="en">anything but</translation>
+        </rule>
+    </rulegroup>
+    <rulegroup id="WANT">
+        <rule>
+            <pattern lang="en">
+                <token inflected="yes">want</token>
+            </pattern>
+            <translation lang="nl">willen</translation>
+        </rule>
+        <rule>
+            <pattern lang="nl">
+                <token inflected="yes">wand</token>
+            </pattern>
+            <translation lang="en">wall</translation>
+        </rule>
+        <rule>
+            <pattern lang="en">
+                <token inflected="yes">wall</token>
+            </pattern>
+            <translation lang="en">wand</translation>
+            <translation lang="en">muur</translation>
         </rule>
     </rulegroup>
     
