@@ -4,6 +4,7 @@ LanguageTool Change Log
 
 -Dutch:
     -remove a hack from the word tokenizer code
+    -several new false friends (by Sander van Geloven)
 
 -English:
     -added a new rule to handle corrections of mistakes in standard
